5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1758_1185.log
== TEST (2019-05-28 11:00:16) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		print(g[i])
		
	elif:
		n = n + 1
		
	i = i + 1
print(n)
-- ERROR:
File "XXXX", line 11
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:00:38) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		print(g[i])
		
	elif(g[i]>99):
		n = n + 1
		
	i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:02:44) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
	print(g[i])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:33) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
	print(i)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:14) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias
b = 
while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i)
	else:
		i = i + 1
print(n)
-- ERROR:
File "XXXX", line 6
    b = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:23) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i)
	else:
		i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:09) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = -1 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i)
	else:
		i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:37) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i =  #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i)
	else:
		i = i + 1
print(n)
-- ERROR:
File "XXXX", line 4
    i =  #posicao do vetor 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:44) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i)
	else:
		i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:07:57) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i-1)
	else:
		i = i + 1
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:08:13) 
-- CODE:
from numpy import*
g = array(eval(input("insira o nivel de glicose")))
#acumuladoras
i = 0 #posicao do vetor 
n = 0 #numero de ocorrencias

while (i<size(g)):
	if(g[i]>99):
		n = n + 1
		i = i + 1
		print(i-1)
	else:
		i = i + 1
print(n)
-- EXECUTION TIME:
0.371544
-- TEST CASE 1:
---- input:
[101,89,105,88,104,87]
---- correct output:
0
2
4
3
---- user output:
0
2
4
3
-- TEST CASE 2:
---- input:
[88,100,105,107,100,108,110,99,98,100]
---- correct output:
1
2
3
4
5
6
9
7
---- user output:
1
2
3
4
5
6
9
7
-- TEST CASE 3:
---- input:
[99,98,98,99,98,97]
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
